@@ -238,3 +238,32 @@ def get_user_name_unicode():
 
 def get_host_name_unicode():
     return _ensure_unicode(get_host_name())
+
+
+def glob_expand_for_win32(file_list):
+    """Replacement for glob expansion by the shell.
+
+    Win32's cmd.exe does not do glob expansion (eg ``*.py``), so we do our own
+    here.
+
+    :param file_list: A list of filenames which may include shell globs.
+    :return: An expanded list of filenames.
+
+    Introduced in bzrlib 0.18.
+    """
+    if not file_list:
+        return []
+    import glob
+    expanded_file_list = []
+    for possible_glob in file_list:
+        glob_files = glob.glob(possible_glob)
+
+        if glob_files == []:
+            # special case to let the normal code path handle
+            # files that do not exists
+            expanded_file_list.append(possible_glob)
+        else:
+            expanded_file_list += glob_files
+    return expanded_file_list
+
+
